--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@
 __pycache__
 /instance
 
+/backend/build-heroku/
+
 # /backend/environment/
 # Disabling the environment folder made it so that I couldn't run any flask apps since the pip packages weren't detected at terminal level.
