--- a/frontend/myapp/package.json
+++ b/frontend/myapp/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.6",
     "bootstrap": "^5.3.0-alpha1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
