--- a/frontend/myapp/package.json
+++ b/frontend/myapp/package.json
@@ -41,5 +41,6 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.11.2"
-  }
+  },
+  "homepage": "https://prod.d2ex35j7wbbaej.amplifyapp.com/"
 }
