--- a/frontend/myapp/public/manifest.json
+++ b/frontend/myapp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Agileplanner.tech",
+  "name": "AgilePlanner.tech",
   "icons": [
     {
       "src": "favicon.ico",
